// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / ProgressIndicator Default 1`] = `
.c0 {
  background-color: transparent;
}

.c6 {
  padding-top: 12px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 24px;
}

.c4 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

.c5 {
  height: 4px;
  position: relative;
  width: 100%;
  background: #EEEEEE;
}

.c5:after {
  position: absolute;
  left: 0;
  -webkit-transition: -webkit-transform 333ms;
  -webkit-transition: transform 333ms;
  transition: transform 333ms;
  -webkit-transform: scaleX(0.6666666666666666);
  -ms-transform: scaleX(0.6666666666666666);
  transform: scaleX(0.6666666666666666);
  background: #336BFF;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  width: 100%;
  height: 100%;
  display: block;
  content: '';
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1;
  border: none;
}

.c1 {
  padding: 12px 20px;
}

@media (min-width:760px) {
  .c7 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
  className="c0 c1"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="c2"
  >
    <button
      className="c3"
    >
      <svg
        aria-hidden="true"
        className="c4"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        width={16}
      >
        <path
          d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
          fill="currentColor"
        />
      </svg>
      
    </button>
    <div
      className="c5"
    />
    <button
      className="c3"
    >
      
      
    </button>
  </div>
  <div
    className="c6"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c7"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressIndicator New Progress Indicator 1`] = `
Array [
  .c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  background-color: transparent;
}

.c7 {
  padding-top: 12px;
  background-color: transparent;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 24px;
}

.c5 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

.c6 {
  height: 4px;
  position: relative;
  width: 100%;
  background: #EEEEEE;
}

.c6:after {
  position: absolute;
  left: 0;
  -webkit-transition: -webkit-transform 333ms;
  -webkit-transition: transform 333ms;
  transition: transform 333ms;
  -webkit-transform: scaleX(0.6666666666666666);
  -ms-transform: scaleX(0.6666666666666666);
  transform: scaleX(0.6666666666666666);
  background: #336BFF;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  width: 100%;
  height: 100%;
  display: block;
  content: '';
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1;
  border: none;
}

.c2 {
  padding: 12px 20px;
}

@media (min-width:760px) {
  .c8 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="c3"
      >
        <button
          className="c4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
              fill="currentColor"
            />
          </svg>
          
        </button>
        <div
          className="c6"
        />
        <button
          className="c4"
          onClick={[Function]}
        >
          
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8.468 9.618H6.896v-.204c0-.8 0-1.174 1.212-2.16l.115-.093c.473-.384.833-.677.833-1.155 0-.456-.324-.816-.972-.816-.672 0-1.044.42-1.2.924H5.072C5.312 4.482 6.536 3.63 8.12 3.63c1.668 0 2.808.888 2.808 2.292 0 .936-.396 1.428-1.464 2.34l-.044.037c-.48.4-.823.685-.916 1.139l-.036.18zM6.764 10.458h1.884v1.908H6.764v-1.908z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M8 16A8 8 0 108 0a8 8 0 000 16zm0-2A6 6 0 108 2a6 6 0 000 12z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        className="c7"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c8"
        />
      </div>
    </div>
  </div>,
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: #2650BF;
}

.c2:active {
  background-color: #1F4099;
}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <button
      className="c1 c2"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          1
        </span>
      </span>
    </button>
    <button
      className="c1 c2"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          2
        </span>
      </span>
    </button>
    <button
      className="c1 c2"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          3
        </span>
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Molecules / ProgressIndicator With Labels 1`] = `
.c0 {
  background-color: transparent;
}

.c6 {
  padding-top: 12px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 24px;
}

.c4 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

.c5 {
  height: 4px;
  position: relative;
  width: 100%;
  background: #EEEEEE;
}

.c5:after {
  position: absolute;
  left: 0;
  -webkit-transition: -webkit-transform 333ms;
  -webkit-transition: transform 333ms;
  transition: transform 333ms;
  -webkit-transform: scaleX(0.6666666666666666);
  -ms-transform: scaleX(0.6666666666666666);
  transform: scaleX(0.6666666666666666);
  background: #336BFF;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  width: 100%;
  height: 100%;
  display: block;
  content: '';
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 1;
  border: none;
}

.c1 {
  padding: 12px 20px;
}

@media (min-width:760px) {
  .c7 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
  className="c0 c1"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="c2"
  >
    <button
      className="c3"
    >
      <svg
        aria-hidden="true"
        className="c4"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        width={16}
      >
        <path
          d="M13.42 0l-8 8 8 8h-2.828l-8-8 8-8h2.828z"
          fill="currentColor"
        />
      </svg>
      
    </button>
    <div
      className="c5"
    />
    <button
      className="c3"
    >
      
      
    </button>
  </div>
  <div
    className="c6"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c7"
    />
  </div>
</div>
`;
